// Copyright 2021 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package steps;

option go_package = "infra/cros/cmd/labpack/steps;stepspb";

// LabpackInput represents list of input parameters.
message LabpackInput {
  // Unit name represents some device setup against which running the task.
  string unit_name = 1;
  // Task name running against unit.
  string task_name = 2;
  // Enable recovery tells if recovery actions are enabled.
  bool enable_recovery = 3;
  // Update inventory tells if process ellow update inventory during execution.
  bool update_inventory = 4;
  // Admin service path to initialie local TLW.
  string admin_service = 5;
  // Inventory service path to initialie local TLW.
  string inventory_service = 6;
  // Do not use stepper during execution.
  bool no_stepper = 7;
};

// LabpackResponse represents result of execution the task on unit.
message LabpackResponse {
  bool Success = 1;
}